Evolutions au 02/11/2017, version 0.01
- Point d'étape, lecture de la table des providerContact locale en place.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=checkProviderContact
+application.vendor=thierry.baribaud
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,12 +27,22 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/checkProviderContact.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 file.reference.ifxjdbc.jar=C:\\Users\\thierry.baribaud\\Documents\\Java\\ifxjdbc.jar
+file.reference.jackson-annotations-2.8.0.jar=C:\\Users\\thierry.baribaud\\Documents\\Java\\jackson-annotations-2.8.0.jar
+file.reference.jackson-core-2.8.3.jar=C:\\Users\\thierry.baribaud\\Documents\\Java\\jackson-core-2.8.3.jar
+file.reference.jackson-databind-2.8.3.jar=C:\\Users\\thierry.baribaud\\Documents\\Java\\jackson-databind-2.8.3.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.ifxjdbc.jar}
+    ${file.reference.ifxjdbc.jar}:\
+    ${reference.LibUtils.jar}:\
+    ${reference.Bkgpi2a.jar}:\
+    ${file.reference.jackson-annotations-2.8.0.jar}:\
+    ${file.reference.jackson-core-2.8.3.jar}:\
+    ${file.reference.jackson-databind-2.8.3.jar}:\
+    ${reference.LibBdd.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -60,6 +71,12 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
+project.Bkgpi2a=../Bkgpi2a/Bkgpi2a
+project.LibBdd=../LibBdd
+project.LibUtils=../LibUtils
+reference.Bkgpi2a.jar=${project.Bkgpi2a}/dist/Bkgpi2a.jar
+reference.LibBdd.jar=${project.LibBdd}/dist/LibBdd.jar
+reference.LibUtils.jar=${project.LibUtils}/dist/LibUtils.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
