--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,10 +29,23 @@ dist.jar=${dist.dir}/checkProviderContact.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.commons-codec-1.10.jar=C:\\Users\\thierry.baribaud\\Documents\\Java\\poi-bin-3.15-20160924\\poi-3.15\\lib\\commons-codec-1.10.jar
+file.reference.commons-collections4-4.1.jar=C:\\Users\\thierry.baribaud\\Documents\\Java\\poi-bin-3.15-20160924\\poi-3.15\\lib\\commons-collections4-4.1.jar
+file.reference.commons-logging-1.2.jar=C:\\Users\\thierry.baribaud\\Documents\\Java\\poi-bin-3.15-20160924\\poi-3.15\\lib\\commons-logging-1.2.jar
+file.reference.curvesapi-1.04.jar=C:\\Users\\thierry.baribaud\\Documents\\Java\\poi-bin-3.15-20160924\\poi-3.15\\ooxml-lib\\curvesapi-1.04.jar
 file.reference.ifxjdbc.jar=C:\\Users\\thierry.baribaud\\Documents\\Java\\ifxjdbc.jar
 file.reference.jackson-annotations-2.8.0.jar=C:\\Users\\thierry.baribaud\\Documents\\Java\\jackson-annotations-2.8.0.jar
 file.reference.jackson-core-2.8.3.jar=C:\\Users\\thierry.baribaud\\Documents\\Java\\jackson-core-2.8.3.jar
 file.reference.jackson-databind-2.8.3.jar=C:\\Users\\thierry.baribaud\\Documents\\Java\\jackson-databind-2.8.3.jar
+file.reference.junit-4.12.jar=C:\\Users\\thierry.baribaud\\Documents\\Java\\poi-bin-3.15-20160924\\poi-3.15\\lib\\junit-4.12.jar
+file.reference.log4j-1.2.17.jar=C:\\Users\\thierry.baribaud\\Documents\\Java\\poi-bin-3.15-20160924\\poi-3.15\\lib\\log4j-1.2.17.jar
+file.reference.poi-3.15.jar=C:\\Users\\thierry.baribaud\\Documents\\Java\\poi-bin-3.15-20160924\\poi-3.15\\poi-3.15.jar
+file.reference.poi-examples-3.15.jar=C:\\Users\\thierry.baribaud\\Documents\\Java\\poi-bin-3.15-20160924\\poi-3.15\\poi-examples-3.15.jar
+file.reference.poi-excelant-3.15.jar=C:\\Users\\thierry.baribaud\\Documents\\Java\\poi-bin-3.15-20160924\\poi-3.15\\poi-excelant-3.15.jar
+file.reference.poi-ooxml-3.15.jar=C:\\Users\\thierry.baribaud\\Documents\\Java\\poi-bin-3.15-20160924\\poi-3.15\\poi-ooxml-3.15.jar
+file.reference.poi-ooxml-schemas-3.15.jar=C:\\Users\\thierry.baribaud\\Documents\\Java\\poi-bin-3.15-20160924\\poi-3.15\\poi-ooxml-schemas-3.15.jar
+file.reference.poi-scratchpad-3.15.jar=C:\\Users\\thierry.baribaud\\Documents\\Java\\poi-bin-3.15-20160924\\poi-3.15\\poi-scratchpad-3.15.jar
+file.reference.xmlbeans-2.6.0.jar=C:\\Users\\thierry.baribaud\\Documents\\Java\\poi-bin-3.15-20160924\\poi-3.15\\ooxml-lib\\xmlbeans-2.6.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -42,7 +55,20 @@ javac.classpath=\
     ${file.reference.jackson-annotations-2.8.0.jar}:\
     ${file.reference.jackson-core-2.8.3.jar}:\
     ${file.reference.jackson-databind-2.8.3.jar}:\
-    ${reference.LibBdd.jar}
+    ${reference.LibBdd.jar}:\
+    ${file.reference.poi-3.15.jar}:\
+    ${file.reference.poi-examples-3.15.jar}:\
+    ${file.reference.poi-excelant-3.15.jar}:\
+    ${file.reference.poi-ooxml-3.15.jar}:\
+    ${file.reference.poi-ooxml-schemas-3.15.jar}:\
+    ${file.reference.poi-scratchpad-3.15.jar}:\
+    ${file.reference.commons-codec-1.10.jar}:\
+    ${file.reference.commons-collections4-4.1.jar}:\
+    ${file.reference.commons-logging-1.2.jar}:\
+    ${file.reference.junit-4.12.jar}:\
+    ${file.reference.log4j-1.2.17.jar}:\
+    ${file.reference.curvesapi-1.04.jar}:\
+    ${file.reference.xmlbeans-2.6.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
